--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -1,63 +1,89 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+    <title>Great Idea!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
-  <!--[if lt IE 9]>
+    <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
+<img src="/Users/olu/Documents/GitHub/User-Interface/great-idea-website/img/logo.png" alt="">
 
-  <body>
+<body>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+    <nav class="navigation">
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
-  Get Started
+    </nav>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+    <div class="body-width">
 
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        <header>
+            <div class="headmaster">
+                <h1 class="head"> Innovation On Demand
+                </h1>
+                <button>Get Started</button>
+            </div>
 
+            <img class="middle" src="img/header-img.png" alt="Image of a code snippet."></img>
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </header>
 
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        <section class="top-content">
 
+            <section class="features">
+                <h2>Features</h2>
+                Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </section>
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            <section class="about">
+                <h2>About</h2>
+                Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </section>
+        </section>
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+        <section class="bottom-content">
 
-  Copyright Great Idea! 2018
-  
-  </body>
+            <section class="services">
+                <h2>Services</h2>
+                Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </section>
+
+            <section class="product">
+                <h2>Product</h2>
+                Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </section>
+
+            <section class="vision">
+                <h2>Vision</h2>
+                Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+
+            </section>
+        </section>
+
+        <section class="contact">
+            Contact 123 Way 456 Street Somewhere, USA 1 (888) 888-8888 sales@greatidea.io Copyright Great Idea! 2018
+        </section>
+        <footer>
+            Copyright Great Idea! OLU Copying Josh 2019
+        </footer>
+    </div>
+</body>
+
 </html>
