--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -42,20 +42,19 @@
             <img class="middle" src="img/header-img.png" alt="Image of a code snippet."></img>
 
         </header>
-
+        <hr>
         <section class="top-content">
-
-            <section class="features">
+            <div class="features">
                 <h2>Features</h2>
-                Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-            </section>
-
-            <section class="about">
+                <p>elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+            </div>
+            <div class="about">
                 <h2>About</h2>
-                Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-            </section>
+                <p> elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+            </div>
         </section>
-
         <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
         <section class="bottom-content">
@@ -76,12 +75,13 @@
 
             </section>
         </section>
-
+        <hr>
         <section class="contact">
-            Contact 123 Way 456 Street Somewhere, USA 1 (888) 888-8888 sales@greatidea.io Copyright Great Idea! 2018
+            <h2>Contact</h2>
+            123 Way 456 Street Somewhere, USA 1 (888) 888-8888 sales@greatidea.io
         </section>
         <footer>
-            Copyright Great Idea! OLU Copying Josh 2019
+            <h6>Copyright Great Idea! OLU Copying Josh 2019</h6>
         </footer>
     </div>
 </body>
